--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
 
 <body>
 
-  
+  <header>
+    <h1>Fun Bus</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <article>
+    <img src="img/fun-bus.jpg" alt="Fun Bus">
+    <h2>Welcome to the Fun Bus!</h2>
+    <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
+  </article>
      
   <div class="container home">
    
