--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
       <a href="#">Contact</a>
     </nav>
   </header>
-
-  <article>
-    <img src="img/fun-bus.jpg" alt="Fun Bus">
-    <h2>Welcome to the Fun Bus!</h2>
-    <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
-  </article>
      
   <div class="container home">
-   
+    <article>
+      <img src="img/fun-bus.jpg" alt="Fun Bus">
+      <div>
+        <h2>Welcome to the Fun Bus!</h2>
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
+      </div>
+    </article>
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
