did one more stretch goal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="img/adventure.jpg" alt="Let's go on an adventure!">
       </div>
     </section>
-    
+
     <section class="content-section inverse-content">
       <div class="img-content boat-dock">
           <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
@@ -79,6 +79,39 @@
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
         <div class="btn">Sign Me Up!</div>
       </div>
+    </section>
+
+    <section class="input-section">
+      <h2>Tell us about yourself!</h2>
+      <div class="user-input">
+        <form class="vac-type">
+          <h3>What type vacation are you looking for?</h3>
+          <input type='radio'>
+          All Inclusive<br>
+          <input type='radio'>
+          Some Inclusive<br>
+          <input type='radio'>
+          None Inclusive<br>
+          <select name="Where?">
+            <option>Where do you want to go?</option>
+            <option>Alabama</option>
+            <option>Arkansas</option>
+            <option>Alaska</option>
+            <option>Arizona</option>
+          </select>
+        </form>
+        <form class="user-info">
+          Name:<br>
+          <input type="text"><br>
+          Phone Number:<br>
+          <input type="text"><br>
+          Email Address:<br>
+          <input type="text"><br>
+          Anything Else?<br>
+          <input type="text"><br>
+        </form>
+      </div>
+      <button>Submit</button>
     </section>
   </div><!-- container -->
 
